--- a/Game/Game.vcxproj
+++ b/Game/Game.vcxproj
@@ -96,30 +96,37 @@
   </ItemDefinitionGroup>
   <ItemGroup>
     <ClCompile Include="Source\App.cpp" />
+    <ClCompile Include="Source\Bullet.cpp" />
     <ClCompile Include="Source\Collider.cpp" />
+    <ClCompile Include="Source\CreditsScene.cpp" />
     <ClCompile Include="Source\DeathScene.cpp" />
+    <ClCompile Include="Source\Enemy.cpp" />
     <ClCompile Include="Source\EnemyFlying.cpp" />
     <ClCompile Include="Source\EnemyWalking.cpp" />
-    <ClCompile Include="Source\ItemHealth.cpp" />
     <ClCompile Include="Source\Entity.cpp" />
+    <ClCompile Include="Source\EntityManager.cpp" />
+    <ClCompile Include="Source\Font.cpp" />
+    <ClCompile Include="Source\GuiButton.cpp" />
+    <ClCompile Include="Source\GuiCheckBox.cpp" />
+    <ClCompile Include="Source\GuiSlider.cpp" />
+    <ClCompile Include="Source\Hud.cpp" />
+    <ClCompile Include="Source\ItemHealth.cpp" />
     <ClCompile Include="Source\ItemStar.cpp" />
     <ClCompile Include="Source\Main.cpp" />
     <ClCompile Include="Source\Audio.cpp" />
     <ClCompile Include="Source\Input.cpp" />
     <ClCompile Include="Source\Map.cpp" />
     <ClCompile Include="Source\ModuleCollisions.cpp" />
-    <ClCompile Include="Source\ModuleEntities.cpp" />
     <ClCompile Include="Source\ModuleFadeToBlack.cpp" />
-    <ClCompile Include="Source\ModuleFonts.cpp" />
-    <ClCompile Include="Source\ModuleHud.cpp" />
     <ClCompile Include="Source\ModuleInitialScreen.cpp" />
-    <ClCompile Include="Source\ModuleParticles.cpp" />
-    <ClCompile Include="Source\ModulePlayer.cpp" />
-    <ClCompile Include="Source\Particle.cpp" />
     <ClCompile Include="Source\Pathfinding.cpp" />
+    <ClCompile Include="Source\PauseMenu.cpp" />
     <ClCompile Include="Source\PerfTimer.cpp" />
+    <ClCompile Include="Source\Player.cpp" />
     <ClCompile Include="Source\Render.cpp" />
-    <ClCompile Include="Source\Scene.cpp" />
+    <ClCompile Include="Source\LevelScene.cpp" />
+    <ClCompile Include="Source\SceneManager.cpp" />
+    <ClCompile Include="Source\SettingsScene.cpp" />
     <ClCompile Include="Source\TitleScreen.cpp" />
     <ClCompile Include="Source\Textures.cpp" />
     <ClCompile Include="Source\Timer.cpp" />
@@ -127,32 +134,38 @@
     <ClCompile Include="Source\WinScreen.cpp" />
     <ClInclude Include="Source\Animation.h" />
     <ClInclude Include="Source\App.h" />
+    <ClInclude Include="Source\Bullet.h" />
     <ClInclude Include="Source\Collider.h" />
+    <ClInclude Include="Source\CreditsScene.h" />
     <ClInclude Include="Source\DeathScene.h" />
-    <ClInclude Include="Source\EnemyFlying.h" />
-    <ClInclude Include="Source\EnemyWalking.h" />
-    <ClInclude Include="Source\ItemHealth.h" />
+    <ClInclude Include="Source\Enemy.h" />
+    <ClInclude Include="Source\EnemiesClasses.h" />
     <ClInclude Include="Source\Entity.h" />
-    <ClInclude Include="Source\ItemStar.h" />
+    <ClInclude Include="Source\EntityManager.h" />
+    <ClInclude Include="Source\Font.h" />
+    <ClInclude Include="Source\GuiButton.h" />
+    <ClInclude Include="Source\GuiCheckBox.h" />
+    <ClInclude Include="Source\GuiControl.h" />
+    <ClInclude Include="Source\GuiSlider.h" />
+    <ClInclude Include="Source\Hud.h" />
     <ClInclude Include="Source\Map.h" />
     <ClInclude Include="Source\Module.h" />
     <ClInclude Include="Source\ModuleCollisions.h" />
-    <ClInclude Include="Source\ModuleEntities.h" />
     <ClInclude Include="Source\ModuleFadeToBlack.h" />
-    <ClInclude Include="Source\ModuleFonts.h" />
-    <ClInclude Include="Source\ModuleHud.h" />
     <ClInclude Include="Source\ModuleInitialScreen.h" />
-    <ClInclude Include="Source\ModuleParticles.h" />
-    <ClInclude Include="Source\ModulePlayer.h" />
-    <ClInclude Include="Source\Particle.h" />
     <ClInclude Include="Source\Pathfinding.h" />
+    <ClInclude Include="Source\PauseMenu.h" />
     <ClInclude Include="Source\PerfTimer.h" />
+    <ClInclude Include="Source\Player.h" />
     <ClInclude Include="Source\PQueue.h" />
     <ClInclude Include="Source\Queue.h" />
     <ClInclude Include="Source\Audio.h" />
     <ClInclude Include="Source\Input.h" />
     <ClInclude Include="Source\Render.h" />
+    <ClInclude Include="Source\LevelScene.h" />
     <ClInclude Include="Source\Scene.h" />
+    <ClInclude Include="Source\SceneManager.h" />
+    <ClInclude Include="Source\SettingsScene.h" />
     <ClInclude Include="Source\TitleScreen.h" />
     <ClInclude Include="Source\Textures.h" />
     <ClInclude Include="Source\Timer.h" />
